--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,7 @@ vignettes/*.pdf
 
 # R Environment Variables
 .Renviron
+.Rbuildignore
 
 # pkgdown site
 docs/
@@ -48,3 +49,5 @@ po/*~
 # RStudio Connect folder
 rsconnect/
 inst/doc
+/doc/
+/Meta/
