--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -22,7 +22,7 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        r-version: ['3.6.3', '4.1.1']
+        r-version: ['4.0.1', '4.1.1', '4.2.1', '4.3.1', '4.4.1', '4.5.1',]
 
     steps:
       - uses: actions/checkout@v4
