--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,6 +25,8 @@ Imports:
   dplyr,
   ggplot2,
   ipw,
+  knitr,
+  rmarkdown,
   sandwich,
   stdReg,
   SuperLearner,
@@ -35,6 +37,3 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
-Suggests: 
-    rmarkdown,
-    knitr
