--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -36,9 +36,11 @@ Imports:
   stdReg,
   SuperLearner,
   survey
-URL: https://github.com/bips-hb/APTS_Causal_Inference
+URL: https://bips-hb.github.io/APTS_Causal_Inference/,
+     https://github.com/bips-hb/APTS_Causal_Inference
+BugReports: https://github.com/bips-hb/APTS_Causal_Inference/issues
 VignetteBuilder: knitr
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.2
