--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -4,7 +4,8 @@ pkgdown_sha: ~
 articles:
   Commands: Commands.html
   installation: installation.html
-last_built: 2025-08-29T08:56Z
+  solution: solution.html
+last_built: 2025-08-29T09:09Z
 urls:
   reference: https://bips-hb.github.io/APTS_Causal_Inference/reference
   article: https://bips-hb.github.io/APTS_Causal_Inference/articles
